Use LSP To Lint Code Before Attempting to Build (#756)
* Refactored much of the LanguageClient logic and implemented diagnostic listening capability via `IAnalyzer.lintFiles`

* Linting test to use real paths

* Initial linter feedback with CodeAgent

* Integrated linter logic with context manager

* Tested and fixed linting errors

* integrate LSP linting with build phase

* Usage consistent API strategy

* Fix tests

---------

Co-authored-by: Jonathan Ellis <jbellis@gmail.com>